# rezq

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py
src/rezq/: __init__.py
tests/: conftest.py  test.py
